Web Inspector: front-end shouldn't change the order of User Style Sheet rules https://bugs.webkit.org/show_bug.cgi?id=210893 <rdar://problem/61937118>

Reviewed by Devin Rousso.

Source/WebCore:

Previously, some style sheets were falsly detected as Inspector::Protocol::CSS::StyleSheetOrigin::User
causing incorrect order of style rules in Web Inspector.

Test: inspector/css/getMatchedStylesForNode.html

* inspector/agents/InspectorCSSAgent.cpp:
(WebCore::InspectorCSSAgent::detectOrigin):

LayoutTests:

Test that AuthorCSS and UserCSS are correctly arranged.

* inspector/css/getMatchedStylesForNode-expected.txt:
* inspector/css/getMatchedStylesForNode.html:


Canonical link: https://commits.webkit.org/224799@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261703 268f45cc-cd09-0410-ab3c-d52691b4dbfc